@@ -201,7 +201,7 @@ static void SCR_EraseCenterString (void)
 
 static void SCR_DrawCenterString (void)
 {
-	int	i;
+	int	i, cnt;
 	int	bx, by;
 	char	temp[80];
 
@@ -213,8 +213,9 @@ static void SCR_DrawCenterString (void)
 
 	for (i = 0; i < lines; i++, by += 8)
 	{
-		strncpy (temp, &scr_centerstring[StartC[i]], EndC[i] - StartC[i]);
-		temp[EndC[i] - StartC[i]] = 0;
+		cnt = EndC[i] - StartC[i];
+		strncpy (temp, &scr_centerstring[StartC[i]], cnt);
+		temp[cnt] = 0;
 		bx = (40-strlen(temp)) * 8 / 2;
 		M_Print2 (bx, by, temp);
 	}
@@ -829,7 +830,7 @@ static void Plaque_Draw (void)
 
 static void Plaque_Draw (const char *message, qboolean AlwaysDraw)
 {
-	int	i;
+	int	i, cnt;
 	int	bx, by;
 	char	temp[80];
 
@@ -848,8 +849,9 @@ static void Plaque_Draw (const char *message, qboolean AlwaysDraw)
 
 	for (i = 0; i < lines; i++, by += 8)
 	{
-		strncpy (temp, &message[StartC[i]], EndC[i] - StartC[i]);
-		temp[EndC[i] - StartC[i]] = 0;
+		cnt = EndC[i] - StartC[i];
+		strncpy (temp, &message[StartC[i]], cnt);
+		temp[cnt] = 0;
 		bx = (40-strlen(temp)) * 8 / 2;
 		M_Print2 (bx, by, temp);
 	}
